--- a/functionary/ui/templates/base.html
+++ b/functionary/ui/templates/base.html
@@ -123,7 +123,7 @@
                             </a>
                         </li>
                         <li class="menu-item">
-                            <a href="{% url 'ui:schedule-list' %}">
+                            <a href="{% url 'ui:scheduledtask-list' %}">
                                 <span class="icon has-text-info"><i class="fa fa-lg fa-clock"></i></span>
                                 &nbsp;Schedules
                             </a>
