--- a/functionary/ui/templates/core/scheduledtask_detail.html
+++ b/functionary/ui/templates/core/scheduledtask_detail.html
@@ -6,7 +6,7 @@
 <nav class="breadcrumb has-arrow-separator mt-3" aria-label="breadcrumbs">
     <ul>
         <li>
-            <a href="{% url 'ui:schedule-list' %}">Schedules List</a>
+            <a href="{% url 'ui:scheduledtask-list' %}">Schedules List</a>
         </li>
         <li class="is-active">
             <a href="#">
