--- a/functionary/ui/templates/forms/team/teamuserrole_create.html
+++ b/functionary/ui/templates/forms/team/teamuserrole_create.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block form_declaration %}
-    <form hx-post="{% url 'ui:create-team-member' team_id %}" method="post" hx-swap="outerHTML" hx-target="#form-modal">
+    <form hx-post="{% url 'ui:teamuserrole-create' team_id %}" method="post" hx-swap="outerHTML" hx-target="#form-modal">
 {% endblock %}
 
 {% block modal_content %}
