--- a/functionary/ui/templates/partials/variables_section.html
+++ b/functionary/ui/templates/partials/variables_section.html
@@ -6,7 +6,7 @@
             <button class="button is-small has-text-link is-white singletonActive"
                     type="button"
                     onclick="disableVariableButtons(true)"
-                    hx-post="{% url 'ui:add-variable' parent_id=parent_object.id %}?all=true"
+                    hx-post="{% url 'ui:variable-create' parent_id=parent_object.id %}?all=true"
                     hx-target="#variableforms"
                     hx-swap="innerHTML">
                 <span class="fa fa-plus"/>
