#154 - Configure auth providers via Django Admin (#173)

--- a/functionary/ui/templates/account/login.html
+++ b/functionary/ui/templates/account/login.html
@@ -1,5 +1,6 @@
 {% load static %}
 {% load socialaccount %}
+{% load social_helper %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -102,7 +103,7 @@
             </div>
         {% endblock content %}
         {% block extracontent %}
-            {% get_providers as socialaccount_providers %}
+            {% configured_providers as socialaccount_providers %}
             {% if socialaccount_providers %}
                 <form>
                     {% csrf_token %}
@@ -113,30 +114,31 @@
                                     <div class="card-content">
                                         <span class="is-size-4">Or login with:</span>
                                         <div class="columns is-multiline is-mobile">
-                                            {% for provider in socialaccount_providers %}
-                                                {% if provider.id == "openid" %}
-                                                    {% for brand in provider.get_brands %}
-                                                        {% comment %}The double class on here will default to openid's icon if the brand doesn't have one{% endcomment %}
-                                                        <button title="{{ brand.name }}"
-                                                                class="button icon-{{ provider.id }} icon-{{ brand.id }}"
+                                            {% for provider_pair in socialaccount_providers %}
+                                                {% if provider_pair.provider.id == "openid" %}
+                                                    {% for brand in provider_pair.provider.get_brands %}
+                                                        <div class="column">
+                                                            {% comment %}The double class on here will default to openid's icon if the brand doesn't have one{% endcomment %}
+                                                            <button title="{{ brand.name }}"
+                                                                    class="button icon-{{ provider_pair.provider.id }} icon-{{ brand.id }}"
+                                                                    type="submit"
+                                                                    hx-get="{% provider_login_url provider_pair.provider.id openid=brand.openid_url process=process %}">
+                                                                &nbsp;{{ brand.name }}
+                                                            </button>
+                                                        </div>
+                                                    {% endfor %}
+                                                {% else %}
+                                                    <div class="column">
+                                                        <button title="{{ provider_pair.name }}"
+                                                                class="button icon-{{ provider_pair.provider.id }}"
                                                                 type="submit"
                                                                 hx-target="#show_modal"
                                                                 hx-swap="innerHTML"
-                                                                hx-get="{% provider_login_url provider.id openid=brand.openid_url process=process %}">
-                                                            &nbsp;{{ brand.name }}
+                                                                hx-get="{% provider_login_url provider_pair.provider.id process=process scope=scope auth_params=auth_params %}">
+                                                            &nbsp;{{ provider_pair.name }}
                                                         </button>
-                                                    {% endfor %}
+                                                    </div>
                                                 {% endif %}
-                                                <div class="column">
-                                                    <button title="{{ provider.name }}"
-                                                            class="button icon-{{ provider.id }}"
-                                                            type="submit"
-                                                            hx-target="#show_modal"
-                                                            hx-swap="innerHTML"
-                                                            hx-get="{% provider_login_url provider.id process=process scope=scope auth_params=auth_params %}">
-                                                        &nbsp;{{ provider.name }}
-                                                    </button>
-                                                </div>
                                             {% endfor %}
                                         </div>
                                     </div>
